Fix the following spacing problems

--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ p {
 
 .intro {
   max-width: 19em;
-  margin-bottom: 1.5em;
+  margin-bottom: 2em;
 }
 
 .ice-cream-cone {
